Added Swipe Refresh, fixed image flicker issue
1)Added swipe refresh layout ot both main and detail activity
2)Fixed flicker issue by making imageview height as match_parent
3)Added title to image in gridview